Fix encoding in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=demo
-# Configuración del servidor
+# Server configuration
 server.port=8080
 
-# Configuración de Firebase (asegúrate de reemplazar con tus propios valores)
+# Firebase configuration
 firebase.database.url=https://veterinaria-app-a2d50.firebaseio.com
 firebase.config.path=firebase-service-account.json
 
-# Configuración de seguridad
+# Security configuration
 spring.security.user.name=omar@email.com
 spring.security.user.password=sape1234
 
-# Configuración de logging
+# Logging configuration
 logging.level.org.springframework=INFO
 logging.level.com.example.demo=DEBUG
 logging.level.org.springframework.security=DEBUG
@@ -21,7 +21,7 @@ jwt.expiration=3600000
 
 firebase.api.key=AIzaSyCCeWOCwHr-1tfOyG0dST5yHXFjCnDI-n8
 
-# Configuración de Mailtrap
+# Mailtrap configuration
 spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=2525
 spring.mail.username=54091cd0870299
