deploy jenkins within docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=demo
-# Server configuration
 server.port=8080
 
 # Firebase configuration
-firebase.database.url=https://veterinaria-app-a2d50.firebaseio.com
-firebase.config.path=firebase-service-account.json
+firebase.database.url=${FIREBASE_DATABASE_URL:https://veterinaria-app-a2d50.firebaseio.com}
+firebase.config.path=${FIREBASE_CONFIG_PATH:firebase-service-account.json}
+firebase.api.key=${FIREBASE_API_KEY:AIzaSyCCeWOCwHr-1tfOyG0dST5yHXFjCnDI-n8}
 
 # Security configuration
 spring.security.user.name=omar@email.com
@@ -15,20 +15,19 @@ logging.level.org.springframework=INFO
 logging.level.com.example.demo=DEBUG
 logging.level.org.springframework.security=DEBUG
 
-
-jwt.secret=miClaveSecretaJWTGenerada1234567890abcdef
-jwt.expiration=3600000
-
-firebase.api.key=AIzaSyCCeWOCwHr-1tfOyG0dST5yHXFjCnDI-n8
+# JWT configuration
+jwt.secret=${JWT_SECRET:miClaveSecretaJWTGenerada1234567890abcdef}
+jwt.expiration=${JWT_EXPIRATION:3600000}
 
 # Mailtrap configuration
-spring.mail.host=sandbox.smtp.mailtrap.io
-spring.mail.port=2525
-spring.mail.username=54091cd0870299
-spring.mail.password=7e500d304aef97
+spring.mail.host=${SPRING_MAIL_HOST:sandbox.smtp.mailtrap.io}
+spring.mail.port=${SPRING_MAIL_PORT:2525}
+spring.mail.username=${SPRING_MAIL_USERNAME:54091cd0870299}
+spring.mail.password=${SPRING_MAIL_PASSWORD:7e500d304aef97}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+# Swagger configuration
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.enabled=true
