jenkins file para deploy este es el bueno virgencita X3 esta es la vencida porfavor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 
 # Firebase configuration
 firebase.database.url=${FIREBASE_DATABASE_URL:https://veterinaria-app-a2d50.firebaseio.com}
-firebase.config.path=${FIREBASE_CONFIG_PATH:classpath:firebase-service-account.json}
+firebase.config.path=${FIREBASE_CONFIG_PATH:firebase-service-account.json}
 firebase.api.key=${FIREBASE_API_KEY:AIzaSyCCeWOCwHr-1tfOyG0dST5yHXFjCnDI-n8}
 
 # Security configuration
