--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=demo
 server.port=8080
+spring.jackson.time-zone=UTC
 
 # Firebase configuration
 firebase.database.url=${FIREBASE_DATABASE_URL:https://veterinaria-app-a2d50.firebaseio.com}
